Bug 1904765 - [devtools] Support High Contrast Mode in toolbox when theme is auto. r=devtools-reviewers,ochameau.
This adds a `forced-colors-active` attribute on documentElements when:
- `devtools.high-contrast-mode-support` is set to true
- the selected theme is "auto"
- and high contrast mode is enabled.

This way we can style specifically for HCM with `:root[forced-colors-active]`.
`browser_theme_switching.js` is extended to run assertion on this attribute.

Differential Revision: https://phabricator.services.mozilla.com/D214937

UltraBlame original commit: 8f89e6ab2d58c83279ad5def7b450c2af3401fb7

--- a/devtools/client/themes/common.css
+++ b/devtools/client/themes/common.css
@@ -179,33 +179,6 @@ font
 size
 )
 ;
-/
-*
-TODO
-(
-bug
-1022557
-)
-:
-Perhaps
-we
-want
-to
-allow
-forced
-colors
-in
-devtools
-*
-/
-forced
--
-color
--
-adjust
-:
-none
-;
 -
 -
 tab
@@ -307,6 +280,46 @@ red
 60
 )
 ;
+/
+*
+Don
+'
+t
+allow
+forced
+colors
+in
+DevTools
+if
+they
+'
+re
+not
+supported
+*
+/
+&
+:
+not
+(
+[
+forced
+-
+colors
+-
+active
+]
+)
+{
+forced
+-
+color
+-
+adjust
+:
+none
+;
+}
 }
 :
 root
